--- a/start-Q (2)/index.html
+++ b/start-Q (2)/index.html
@@ -21,7 +21,29 @@
     </header>
 
     <main>
-
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 d-flex justify-content-evenly">
+                        <div class="box">
+                            <div class="minibox">
+                                <h1>Box</h1>
+                            </div>
+                        </div>
+                        <div class="box">
+                            <div class="minibox">
+                                <h1>Box</h1>
+                            </div>
+                        </div>
+                        <div class="box">
+                            <div class="minibox">
+                                <h1>Box</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
