--- a/start-Q (2)/index.html
+++ b/start-Q (2)/index.html
@@ -21,21 +21,21 @@
     </header>
 
     <main>
-        <section>
+        <section id="first">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 d-flex justify-content-evenly">
-                        <div class="box">
+                    <div class="col-md-12 d-flex justify-content-center align-items-center justify-content-around">
+                        <div class="box d-flex justify-content-center align-items-center">
                             <div class="minibox">
                                 <h1>Box</h1>
                             </div>
                         </div>
-                        <div class="box">
+                        <div class="box second d-flex justify-content-center align-items-center">
                             <div class="minibox">
                                 <h1>Box</h1>
                             </div>
                         </div>
-                        <div class="box">
+                        <div class="box third d-flex justify-content-center align-items-center">
                             <div class="minibox">
                                 <h1>Box</h1>
                             </div>
@@ -44,6 +44,7 @@
                 </div>
             </div>
         </section>
+        
     </main>
 
     <footer>
