--- a/start-Q (2)/index.html
+++ b/start-Q (2)/index.html
@@ -24,18 +24,18 @@
         <section id="first">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 d-flex justify-content-center align-items-center justify-content-around">
-                        <div class="box d-flex justify-content-center align-items-center">
+                    <div class="col-md-12">
+                        <div class="box3 d-flex justify-content-center align-items-center">
                             <div class="minibox">
                                 <h1>Box</h1>
                             </div>
                         </div>
-                        <div class="box second d-flex justify-content-center align-items-center">
+                        <div class="box3 d-flex justify-content-center align-items-center">
                             <div class="minibox">
                                 <h1>Box</h1>
                             </div>
                         </div>
-                        <div class="box third d-flex justify-content-center align-items-center">
+                        <div class="box3 d-flex justify-content-center align-items-center">
                             <div class="minibox">
                                 <h1>Box</h1>
                             </div>
@@ -44,7 +44,66 @@
                 </div>
             </div>
         </section>
-        
+        <section id="second">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="box2">
+                            <h1>Demo</h1>
+                        </div>
+                        <div class="box2">
+                            <h1>Demo</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="third">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="circle">
+                            <h1>BOX</h1>
+                        </div>
+                        <div class="circle">
+                            <h1>BOX</h1>
+                        </div>
+                        <div class="circle">
+                            <h1>BOX</h1>
+                        </div>
+                        <div class="circle">
+                            <h1>BOX</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="fourth">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="box">
+                            <h1>TEXT 1</h1>
+                        </div>
+                        <div class="box">
+                            <h1>TEXT 2</h1>
+                        </div>
+                        <div class="box">
+                            <h1>TEXT 3</h1>
+                        </div>
+                        <div class="box">
+                            <h1>TEXT 4</h1>
+                        </div>
+                        <div class="box">
+                            <h1>TEXT 5</h1>
+                        </div>
+                        <div class="box">
+                            <h1>TEXT 6</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
