--- a/start-Q (2)/index.html
+++ b/start-Q (2)/index.html
@@ -94,6 +94,32 @@
                         <div class="box">
                             <h1>TEXT 4</h1>
                         </div>
+                        <div class="box" style="position: absolute; left: 600px">
+                            <h1>TEXT 5</h1>
+                        </div>
+                        <div class="box">
+                            <h1>TEXT 6</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="last">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="box">
+                            <h1>TEXT 1</h1>
+                        </div>
+                        <div class="box" style="position: absolute; left: 600px">
+                            <h1>TEXT 2</h1>
+                        </div>
+                        <div class="box">
+                            <h1>TEXT 3</h1>
+                        </div>
+                        <div class="box">
+                            <h1>TEXT 4</h1>
+                        </div>
                         <div class="box">
                             <h1>TEXT 5</h1>
                         </div>
